<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Opción principal del panel: resumen de actividad -->
    <item android:id="@+id/nav_dashboard"
        android:title="@string/dashboard_title"
        android:icon="@drawable/ic_dashboard_selector" />

    <!-- Sección de partidas registradas -->
    <item android:id="@+id/nav_sessions"
        android:title="@string/session_title"
        android:icon="@drawable/ic_sessions_selector" />

    <!-- Sección de la ludoteca del usuario -->
    <item android:id="@+id/nav_library"
        android:title="@string/library_title"
        android:icon="@drawable/ic_library_selector" />

    <!-- Sección de perfil del usuario -->
    <item android:id="@+id/nav_profile"
        android:title="@string/profile_title"
        android:icon="@drawable/ic_profile_selector" />
</menu>